<resources>
    <string name="app_name">CryptoChat</string>
    <string name="type_here">type here....</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="create_an_account">Create An Account</string>
    <string name="agree_to_terms_conditions"><![CDATA[Agree to Terms & Conditions]]></string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="welcome_to_cryptochat">Welcome to CryptoChat</string>
    <string name="register">register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_users">Search Users...</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="chathead">chathead</string>
</resources>